--- a/css/style.css
+++ b/css/style.css
@@ -49,18 +49,83 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 0;
 }
-.header-logo h4 a{
+.header-logo a{
     font-size: 28px;
     font-weight: 700;
     color: #0D1321;
+    cursor: pointer;
 }
 .header-button button{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     color: #0d1321c0;
+    background: transparent;
     border: 1px solid rgba(13, 19, 33, 0.795);
     padding: 15px 20px;
     border-radius: 8px;
+    cursor: pointer;
+    transition: ease-in-out 0.3s;
+}
+.header-button button:hover{
+    background: #0D1321;
+    color: #ffffff;
+    border: 1px solid transparent;
+    transition: ease-in-out 0.3s;
 }
 /* header part end */
+/* banner part start */
+#banner{
+    background-image: url(../image/Hero-bg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 670px;
+}
+.banner-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.banner-content{
+    max-width: 950px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.banner-content .banner-text{
+    width: 100%;
+    text-align: center;
+}
+.banner-content .banner-text h1{
+    width: 100%;
+    font-size: 48px;
+    font-weight: 800;
+    color: #0D1321;
+    line-height: 68px;
+}
+.banner-text p{
+    padding: 20px 0;
+    width: 100%;
+}
+.banner-btn a{
+    font-size: 18px;
+    font-weight: 600;
+    color: #ffffff;
+    background: #0D1321;
+    border: 1px solid rgba(13, 19, 33, 0.795);
+    padding: 15px 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: ease-in-out 0.3s;
+}
+.banner-btn a:hover{
+    background: transparent;
+    color: #0D1321;
+    transition: ease-in-out 0.3s;
+}
+/* banner part end */
