--- a/css/style.css
+++ b/css/style.css
@@ -271,3 +271,51 @@ a{
     text-transform: capitalize;
 }
 /* current target part end */
+/* next target part start */
+#next-target{
+    margin-bottom: 60px;
+}
+.next-container .next-header{
+    max-width: 852px;
+    text-align: center;
+    margin: 0 auto;
+}
+.next-container .next-content{
+    margin-top: 80px;
+}
+.next-content .next-item:nth-child(2){
+    margin: 60px 0;
+}
+.next-content .next-item .next-icon{
+    width: 190px;
+    height: 130px;
+}
+
+.next-content .next-item .next-icon img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.next-content .next-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
+}
+.ct-item .ct-text h4{
+    font-size: 24px;
+    font-weight: 800;
+    color: #0D1321;
+    text-transform: uppercase;
+}
+.next-content .next-item .next-text p{
+    padding: 15px 0;
+}
+.next-item .next-text .next-btn a{
+    font-size: 14px;
+    font-weight: 600;
+    color: #0d1321;
+    text-decoration: underline;
+    text-transform: capitalize;
+}
+/* next target part end */
